...
        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StudyIt" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                                <state key="normal" title="Sign Up"/>
                                                <connections>
                                                    <segue destination="kNC-SS-vvz" kind="show" identifier="register" id="xVf-ff-8y7"/>
                                                </connections>
                                            </button>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Go" id="6z5-vi-bW8">
                                            <connections>
                                                <segue destination="7MV-HF-4a0" kind="show" id="cxH-32-LrQ"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Username:" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="axJ-tZ-YJR">
                                <rect key="frame" x="181" y="148" width="89" height="33"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="33" id="FcY-QJ-nyJ"/>
                                    <constraint firstAttribute="width" constant="89" id="g22-ZN-zk4"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Password:" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="npp-H8-HWE">
                                <rect key="frame" x="181" y="206" width="89" height="33"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="33" id="TnH-sB-okS"/>
                                    <constraint firstAttribute="width" constant="89" id="pSs-w1-JPX"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKy-Zv-wNc">
                                <rect key="frame" x="336" y="317" width="58" height="22"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="22" id="3xe-CE-x5P"/>
                                    <constraint firstAttribute="width" constant="58" id="XBZ-Kf-H8G"/>
                                </constraints>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zmg-Qv-7iP">
                                <rect key="frame" x="205" y="314" width="81" height="30"/>
                                <constraints>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aur-BW-xyZ">
                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                <animations/>
                                <items>
                                    <navigationItem title="Front" id="tl8-ld-LFm">
                                        <leftBarButtonItems>
                                            <barButtonItem title="Home" id="rgd-M8-w1l">
                                                <connections>
                                                    <segue destination="BYZ-38-t0r" kind="show" id="Ife-r6-MRl"/>
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem title="Back of Card" id="tSG-Si-iga">
                                                <connections>
                                                    <segue destination="upr-Gs-nlf" kind="show" id="aLv-ly-F2l"/>
                                                </connections>
                                            </barButtonItem>
                                        </leftBarButtonItems>
                                        <rightBarButtonItems>
...
                                                <connections>
                                                    <segue destination="7MV-HF-4a0" kind="show" id="fzQ-i6-xcR"/>
                                                </connections>
                                            </barButtonItem>
                                        </leftBarButtonItems>
                                        <rightBarButtonItems>
                                            <barButtonItem title="Save" id="bCH-sc-rH2"/>
                                            <barButtonItem systemItem="camera" id="eZH-dk-hgj"/>
                                        </rightBarButtonItems>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card" translatesAutoresizingMaskIntoConstraints="NO" id="gZh-Gx-kEu">
...
