...
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8VZ-Pa-b5g">
                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                <animations/>
                                <items>
                                    <navigationItem title="Your Sets" id="ufp-T6-egY">
                                        <barButtonItem key="leftBarButtonItem" title="Sign Out" id="XSX-Tx-sVA">
                                            <connections>
                                                <action selector="signOut:" destination="BYZ-38-t0r" id="wXR-vO-kna"/>
                                            </connections>
                                        </barButtonItem>
                                        <rightBarButtonItems>
                                            <barButtonItem systemItem="add" id="7jO-6V-xzq"/>
...
