...
    }
    
    @IBAction func HelpMe(sender: AnyObject) {
        
        let alertControl: UIAlertController = UIAlertController(title: "Help Menu", message:"Wecome to StudyIt! Here you can create multiple sets with its own individuals cards to study and  play a matching game with. To start creating your personal set click on the '+' button on the top right." , preferredStyle: .Alert)

        let cancel = UIAlertAction(title: "Cancel", style: .Default) {action -> Void in}
        alertControl.addAction(cancel)
        self.presentViewController(alertControl, animated: true, completion: nil)

    }
    
    @IBAction func SignOut(sender: AnyObject) {
...
        collection.reloadData()
    }
    
    
    @IBAction func addSet(sender: AnyObject) {
        let alertControl: UIAlertController = UIAlertController(title: "Start by naming your set", message: "", preferredStyle: .Alert)
        let ok = UIAlertAction(title: "OK", style: .Cancel) { action -> Void in
            let titlename = alertControl.textFields![0] as UITextField
            self.setName = titlename.text!
            if self.setName != "" {
                self.performSegueWithIdentifier("toCard", sender: nil)
            }
        }
...
